Fixed overflow-y

--- a/styles-updated.css
+++ b/styles-updated.css
@@ -5,7 +5,7 @@
 
 html {
   height: 100%;
-  overflow-y: none;
+  overflow-y: hidden;
 }
 
 body {
